--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <aside class="menu-lateral">
                 <ul>
                     <li>
-                        <a href="#" target="_blank">
+                        <a href="https://github.com/pedro-h7" target="_blank">
                             <img src="./src/images/github.svg" alt="ícone GitHub" class="icone">
                         </a>
                     </li>
